@@ -1,0 +1,192 @@
+# Doxyfile 1.1.5
+#
+# $Id$
+#
+
+PROJECT_NAME          = TAO_SSLIOP
+PROJECT_NUMBER        = Snapshot
+OUTPUT_DIRECTORY      = .
+OUTPUT_LANGUAGE       = English
+DISABLE_INDEX         = NO
+EXTRACT_ALL           = YES
+EXTRACT_PRIVATE       = YES
+EXTRACT_STATIC        = YES
+HIDE_UNDOC_MEMBERS    = NO
+HIDE_UNDOC_CLASSES    = NO
+BRIEF_MEMBER_DESC     = YES
+REPEAT_BRIEF          = YES
+ALWAYS_DETAILED_SEC   = NO
+FULL_PATH_NAMES       = NO
+STRIP_FROM_PATH       = 
+INTERNAL_DOCS         = NO
+CLASS_DIAGRAMS        = YES
+SOURCE_BROWSER        = YES
+INLINE_SOURCES        = YES
+STRIP_CODE_COMMENTS   = NO
+CASE_SENSE_NAMES      = YES
+HIDE_SCOPE_NAMES      = NO
+VERBATIM_HEADERS      = YES
+SHOW_INCLUDE_FILES    = YES
+JAVADOC_AUTOBRIEF     = NO
+INHERIT_DOCS          = YES
+INLINE_INFO           = YES
+SORT_MEMBER_DOCS      = YES
+TAB_SIZE              = 8
+ENABLED_SECTIONS      = 
+
+#---------------------------------------------------------------------------
+# configuration options related to warning and progress messages
+#---------------------------------------------------------------------------
+
+QUIET                 = YES
+WARNINGS              = NO
+WARN_IF_UNDOCUMENTED  = NO
+WARN_FORMAT           = "$file:$line: $text"
+
+#---------------------------------------------------------------------------
+# configuration options related to the input files
+#---------------------------------------------------------------------------
+
+INPUT                 = TAO/orbsvcs/orbsvcs/SSLIOP.idl TAO/orbsvcs/orbsvcs/SSLIOP
+FILE_PATTERNS         = *.cpp *.h *.i *.inl *.pidl *.idl
+RECURSIVE             =
+EXCLUDE               = 
+EXCLUDE_PATTERNS      = 
+EXAMPLE_PATH          = 
+EXAMPLE_PATTERNS      = 
+IMAGE_PATH            = 
+INPUT_FILTER          = 
+
+#---------------------------------------------------------------------------
+# configuration options related to the alphabetical class index
+#---------------------------------------------------------------------------
+
+ALPHABETICAL_INDEX    = YES
+COLS_IN_ALPHA_INDEX   = 1
+IGNORE_PREFIX         = 
+
+#---------------------------------------------------------------------------
+# configuration options related to the HTML output
+#---------------------------------------------------------------------------
+
+GENERATE_HTML         = YES
+HTML_OUTPUT           = html/orbsvcs/orbsvcs/SSLIOP
+HTML_HEADER           = 
+HTML_FOOTER           =
+HTML_STYLESHEET       = 
+HTML_ALIGN_MEMBERS    = YES
+GENERATE_HTMLHELP     = NO
+
+#---------------------------------------------------------------------------
+# configuration options related to the LaTeX output
+#---------------------------------------------------------------------------
+
+GENERATE_LATEX        = NO
+LATEX_OUTPUT          = latex
+COMPACT_LATEX         = NO
+PAPER_TYPE            = a4wide
+EXTRA_PACKAGES        = 
+LATEX_HEADER          = 
+PDF_HYPERLINKS        = NO
+LATEX_BATCHMODE       = NO
+
+#---------------------------------------------------------------------------
+# configuration options related to the RTF output
+#---------------------------------------------------------------------------
+
+GENERATE_RTF          = NO
+RTF_OUTPUT            = rtf
+COMPACT_RTF           = NO
+RTF_HYPERLINKS        = NO
+RTF_STYLESHEET_FILE   = 
+
+#---------------------------------------------------------------------------
+# configuration options related to the man page output
+#---------------------------------------------------------------------------
+
+GENERATE_MAN          = NO
+MAN_OUTPUT            = man
+MAN_EXTENSION         = .3
+
+#---------------------------------------------------------------------------
+# Configuration options related to the preprocessor   
+#---------------------------------------------------------------------------
+
+ENABLE_PREPROCESSING  = YES
+MACRO_EXPANSION       = YES
+EXPAND_ONLY_PREDEF    = YES
+SEARCH_INCLUDES       = YES
+INCLUDE_PATH          = TAO .
+PREDEFINED            = 
+EXPAND_AS_DEFINED     = ACE_RCSID \
+			ACE_UNIMPLEMENTED_FUNC \
+			ACE_THROW_SPEC
+
+#---------------------------------------------------------------------------
+# Configuration::addtions related to external references   
+#---------------------------------------------------------------------------
+
+TAGFILES              = html/ace/ACE.tag=../../ace html/tao/TAO.tag=..
+GENERATE_TAGFILE      = html/orbsvcs/orbsvcs/SSLIOP/TAO_SSLIOP.tag
+ALLEXTERNALS          = NO
+PERL_PATH             = /usr/bin/perl
+
+#---------------------------------------------------------------------------
+# Configuration options related to the dot tool   
+#---------------------------------------------------------------------------
+
+# If you set the HAVE_DOT tag to YES then doxygen will assume the dot tool is 
+# available from the path. This tool is part of Graphviz
+
+HAVE_DOT              = YES
+CLASS_GRAPH           = YES
+COLLABORATION_GRAPH   = YES
+INCLUDE_GRAPH         = YES
+INCLUDED_BY_GRAPH     = YES
+GRAPHICAL_HIERARCHY   = YES
+# The tag DOT_PATH can be used to specify the path where the dot tool can be 
+# found. If left blank, it is assumed the dot tool can be found on the path. 
+DOT_PATH              = /usr/local/bin
+MAX_DOT_GRAPH_WIDTH   = 1024
+MAX_DOT_GRAPH_HEIGHT  = 1024
+
+#---------------------------------------------------------------------------
+# Configuration::addtions related to the search engine   
+#---------------------------------------------------------------------------
+
+SEARCHENGINE          = NO
+
+# The CGI_NAME tag should be the name of the CGI script that 
+# starts the search engine (doxysearch) with the correct parameters. 
+# A script with this name will be generated by doxygen. 
+
+CGI_NAME              = search.cgi
+
+# The CGI_URL tag should be the absolute URL to the directory where the 
+# cgi binaries are located. See the documentation of your http daemon for 
+# details. 
+
+CGI_URL               = http://doc.ece.uci.edu/cgi-bin/Doxygen/Current
+
+# The DOC_URL tag should be the absolute URL to the directory where the 
+# documentation is located. If left blank the absolute path to the 
+# documentation, with file:// prepended to it, will be used. 
+
+DOC_URL               = http://doc.ece.uci.edu/Doxygen/Current/
+
+# The DOC_ABSPATH tag should be the absolute path to the directory where the 
+# documentation is located. If left blank the directory on the local machine 
+# will be used. 
+
+DOC_ABSPATH           = /project/doctmp/Doxygen/Current
+
+# The BIN_ABSPATH tag must point to the directory where the doxysearch binary 
+# is installed. 
+
+BIN_ABSPATH           = /usr/bin
+
+# The EXT_DOC_PATHS tag can be used to specify one or more paths to 
+# documentation generated for other projects. This allows doxysearch to search 
+# the documentation for these projects as well. 
+
+EXT_DOC_PATHS         = html/ace
